--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>cz.vse</groupId>
     <artifactId>seka01_semestralka</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.1.0-SNAPSHOT</version>
     <name>seka01_semestralka</name>
 
     <properties>
@@ -65,7 +65,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>cz.vse.seka01_semestralka/cz.vse.seka01_semestralka.HelloApplication</mainClass>
+                            <mainClass>cz.vse.seka01_semestralka/cz.vse.seka01_semestralka.main.Start</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
